--- a/html/telemetrix_aio/index.html
+++ b/html/telemetrix_aio/index.html
@@ -304,7 +304,7 @@ class TelemetrixAIO:
         self.stepper_info_list = []
         # a list of dictionaries to hold stepper information
         for motor in range(self.max_number_of_steppers):
-            self.stepper_info_list.append(self.stepper_info)
+            self.stepper_info_list.append(self.stepper_info.copy())
 
         print(f&#39;TelemetrixAIO Version: {PrivateConstants.TELEMETRIX_AIO_VERSION}&#39;)
         print(f&#39;Copyright (c) 2018-2023 Alan Yorinks All rights reserved.\n&#39;)
@@ -553,8 +553,8 @@ class TelemetrixAIO:
 
         callback returns a data list:
 
-        [I2C_READ_REPORT, address, register, count of data bytes,
-         data bytes, time-stamp]
+         [I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+          bytes read..., time-stamp]
 
         &#34;&#34;&#34;
         if not callback:
@@ -594,8 +594,8 @@ class TelemetrixAIO:
 
         callback returns a data list:
 
-        [I2C_READ_REPORT, address, register, count of data bytes,
-         data bytes, time-stamp]
+         [I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+          bytes read..., time-stamp]
 
         &#34;&#34;&#34;
         if not callback:
@@ -990,7 +990,7 @@ class TelemetrixAIO:
         &#34;&#34;&#34;
         if self.reported_features &amp; PrivateConstants.SPI_FEATURE:
 
-            if type(chip_select_list) != list:
+            if type(chip_select_list) is not list:
                 if self.shutdown_on_exception:
                     await self.shutdown()
                 raise RuntimeError(&#39;chip_select_list must be in the form of a list&#39;)
@@ -2832,7 +2832,7 @@ error occurs</p></div>
         self.stepper_info_list = []
         # a list of dictionaries to hold stepper information
         for motor in range(self.max_number_of_steppers):
-            self.stepper_info_list.append(self.stepper_info)
+            self.stepper_info_list.append(self.stepper_info.copy())
 
         print(f&#39;TelemetrixAIO Version: {PrivateConstants.TELEMETRIX_AIO_VERSION}&#39;)
         print(f&#39;Copyright (c) 2018-2023 Alan Yorinks All rights reserved.\n&#39;)
@@ -3081,8 +3081,8 @@ error occurs</p></div>
 
         callback returns a data list:
 
-        [I2C_READ_REPORT, address, register, count of data bytes,
-         data bytes, time-stamp]
+         [I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+          bytes read..., time-stamp]
 
         &#34;&#34;&#34;
         if not callback:
@@ -3122,8 +3122,8 @@ error occurs</p></div>
 
         callback returns a data list:
 
-        [I2C_READ_REPORT, address, register, count of data bytes,
-         data bytes, time-stamp]
+         [I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+          bytes read..., time-stamp]
 
         &#34;&#34;&#34;
         if not callback:
@@ -3518,7 +3518,7 @@ error occurs</p></div>
         &#34;&#34;&#34;
         if self.reported_features &amp; PrivateConstants.SPI_FEATURE:
 
-            if type(chip_select_list) != list:
+            if type(chip_select_list) is not list:
                 if self.shutdown_on_exception:
                     await self.shutdown()
                 raise RuntimeError(&#39;chip_select_list must be in the form of a list&#39;)
@@ -5291,8 +5291,8 @@ result of read command</p>
 before read
 Else, the write is suppressed</p>
 <p>callback returns a data list:</p>
-<p>[I2C_READ_REPORT, address, register, count of data bytes,
-data bytes, time-stamp]</p></div>
+<p>[I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+bytes read&hellip;, time-stamp]</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -5323,8 +5323,8 @@ data bytes, time-stamp]</p></div>
 
     callback returns a data list:
 
-    [I2C_READ_REPORT, address, register, count of data bytes,
-     data bytes, time-stamp]
+     [I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+      bytes read..., time-stamp]
 
     &#34;&#34;&#34;
     if not callback:
@@ -5355,8 +5355,8 @@ result of read command</p>
 before read
 Else, the write is suppressed</p>
 <p>callback returns a data list:</p>
-<p>[I2C_READ_REPORT, address, register, count of data bytes,
-data bytes, time-stamp]</p></div>
+<p>[I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+bytes read&hellip;, time-stamp]</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -5389,8 +5389,8 @@ data bytes, time-stamp]</p></div>
 
     callback returns a data list:
 
-    [I2C_READ_REPORT, address, register, count of data bytes,
-     data bytes, time-stamp]
+     [I2C_READ_REPORT, i2c_port, number of bytes read, address, register,
+      bytes read..., time-stamp]
 
     &#34;&#34;&#34;
     if not callback:
@@ -6274,7 +6274,7 @@ NOTE: You must specify the chips select pins here!</p>
     &#34;&#34;&#34;
     if self.reported_features &amp; PrivateConstants.SPI_FEATURE:
 
-        if type(chip_select_list) != list:
+        if type(chip_select_list) is not list:
             if self.shutdown_on_exception:
                 await self.shutdown()
             raise RuntimeError(&#39;chip_select_list must be in the form of a list&#39;)
